# Visual-Odometry-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  codeql-analysis.yml  macos-latest.yml  ubuntu-latest.yml  windows-latest.yml
apps/: CMakeLists.txt  TrackFeatures.cpp  main.cpp  runKittiDemo.cpp
python/: CMakeLists.txt  Vocpp.i  setup.py.in
python/example/: runKittiDemo.py
src/: CMakeLists.txt
src/Calibration/: CMakeLists.txt
src/Calibration/include/Vocpp_Calibration/: CalibrationModule.h  MonoCameraCalibration.h
src/Calibration/src/: CalibrationModule.cpp
src/DeltaPoseReconstruction/: CMakeLists.txt
src/DeltaPoseReconstruction/include/Vocpp_DeltaPoseReconstruction/: DeltaPoseReconstructor.h  EpipolarSolver.h  FeatureTracker.h  LocalMap.h  RansacOptimizer.h
src/DeltaPoseReconstruction/src/: DeltaPoseReconstructor.cpp  EpipolarModel.h  EpipolarSolution.cpp  EpipolarSolution.h  EpipolarSolver.cpp  FeatureTracker.cpp  FullFundamentalMat8pt.cpp  FullFundamentalMat8pt.h  LocalMap.cpp  LocalMap.h  NoMotionModel.cpp  NoMotionModel.h  PureTranslationModel.cpp  PureTranslationModel.h  RansacOptimizer.cpp  RansacOptimizer.h
src/DeltaPoseReconstruction/test/: CMakeLists.txt
src/DeltaPoseReconstruction/test/src/: EpipolarSolutionTest.cpp  FullFundamentalMat8ptTest.cpp  LocalMapTest.cpp  PureTranslationModelTest.cpp  RansacTest.cpp  main.cpp
src/FeatureHandling/: CMakeLists.txt
src/FeatureHandling/include/Vocpp_FeatureHandling/: BriefDescriptor.h  BruteForceBinaryMatcher.h  BruteForceMatcher.h  Common.h  FeatureDescriptor.h  FeatureDetector.h  FeatureMatcher.h  HarrisEdgeDetector.h  LshMatcher.h  OpenCvOrbDetectorDescriptor.h  OrFastDetector.h  OrbDetectorDescriptor.h
src/FeatureHandling/src/: BriefDescriptor.cpp  BriefDescriptor.h  BruteForceBinaryMatcher.cpp  BruteForceMatcher.cpp  BruteForceMatcher.h  FeatureDescriptor.cpp  FeatureDetector.cpp  FeatureMatcher.cpp  HarrisEdgeDetector.cpp  HarrisEdgeDetector.h  LshMatcher.cpp  OpenCvOrbDetectorDescriptor.cpp  OrFastDetector.cpp  OrbDetectorDescriptor.cpp
src/FeatureHandling/test/: CMakeLists.txt
src/FeatureHandling/test/src/: OrFastChainTest.cpp  OrFastDetectorTest.cpp  OrbTest.cpp  input.h.in
src/Interface/: CMakeLists.txt
src/Interface/include/Vocpp_Interface/: CameraPose.h  DeltaCameraPose.h  DeltaPose.h  Frame.h  Tracing.h  Types.h
src/Interface/test/: CMakeLists.txt
src/Interface/test/src/: FrameTest.cpp
src/Master/: CMakeLists.txt
src/Master/include/Vocpp_Master/: Master.h  VocppMaster.h
src/Master/src/: Master.cpp  VocppMaster.cpp
src/Master/test/: CMakeLists.txt
src/Master/test/src/: MasterTest.cpp  main.cpp
src/Utils/: CMakeLists.txt
src/Utils/include/Vocpp_Utils/: ConversionUtils.h  EpipolarGeometryUtils.h  Frame.h  FrameRotations.h  ImageProcessingUtils.h  IntImage.h  NumericalUtilities.h  TracingImpl.h
src/Utils/src/: ConversionUtils.cpp  EpipolarGeometryUtils.cpp  Frame.cpp  FrameRotations.cpp  ImageProcessingUtils.cpp  IntImage.cpp  NumericalUtilities.cpp  TracingImpl.cpp
src/Utils/test/: CMakeLists.txt
src/Utils/test/src/: EpipolarGeometryUtilsTest.cpp  FrameRotationsTest.cpp  FrameTest.cpp  ImageProcessingUtilsTest.cpp  IntImageTest.cpp  NumericalUtilitiesTest.cpp
